# Autonomous-Infrastructure-Risk

./: .gitignore  README.md  Sanity Check (2).ipynb  pyproject.toml
data/: Synthetic Data Generation (1).ipynb
data/processed/: reports_final_with_all_features.xls  reports_with_features.xls  reports_with_features_and_labels.xls
data/raw/: processed_dataset.xls  synthetic_nlp_dataset.xls
figures/: Mars Style Visuals.ipynb
notebooks/: AI Failure Modes.ipynb  Advanced Model Metrics.ipynb  Complete Data Analysis.ipynb  Complete Model.ipynb  Model Diagnostics.ipynb  Policy Comparison.ipynb  Processed Data Generation.ipynb  Report Language Analysis.ipynb  Risk Inference.ipynb  Simulation Overview.ipynb  Target Variable Generation.ipynb
rust-sim/: Cargo.toml
rust-sim/src/: libs.rs  main.rs
rust-sim/src/config/: parameters.rs
rust-sim/src/models/: agents.rs  capacity_tier.rs  event.rs  mod.rs
rust-sim/src/reporting/: language.rs  mod.rs  template.rs
rust-sim/src/simulation/: dynamics.rs  engine.rs  mod.rs  policy.rs
rust-sim/src/utils/: export.rs  mod.rs  rng.rs
src/: build_processed_dataset.py  constants.py  preprocessing.py
src/nlp/: evaluation.py  features.py  models.py
